--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -699,7 +699,7 @@
 
 
 @Article{CagettiDeNardi2006,
-  author={Marco Cagetti and Mariacristina De Nardi},
+  author={Marco Cagetti and Mariacristina DeNardi},
   title={{Entrepreneurship, Frictions, and Wealth}},
   journal={Journal of Political Economy},
   year=2006,
@@ -1280,7 +1280,7 @@
 }
 
 @Article{DeNardi2004,
-  author={Mariacristina Nardi},
+  author={Mariacristina DeNardi},
   title={{Wealth Inequality and Intergenerational Links}},
   journal={Review of Economic Studies},
   year=2004,
@@ -1297,7 +1297,7 @@
 
 
 @TechReport{DeNardi2015,
-  author={Mariacristina De Nardi},
+  author={Mariacristina DeNardi},
   title={{Quantitative Models of Wealth Inequality: A Survey}},
   year=2015,
   month=Apr,
@@ -1310,7 +1310,7 @@
 }
 
 @TechReport{DeNardiFrenchJonesMcCauley2015,
-  author={Mariacristina De Nardi and Eric French and John Bailey Jones and Jeremy McCauley},
+  author={Mariacristina DeNardi and Eric French and John Bailey Jones and Jeremy McCauley},
   title={{Medical Spending of the U.S. Elderly}},
   year=2015,
   month=Jun,
@@ -1323,7 +1323,7 @@
 }
 
 @Article{DeNardiFrenchJones2010,
-  author={Mariacristina De Nardi and Eric French and John B. Jones},
+  author={Mariacristina DeNardi and Eric French and John B. Jones},
   title={{Why Do the Elderly Save? The Role of Medical Expenses}},
   journal={Journal of Political Economy},
   year=2010,
@@ -1340,7 +1340,7 @@
 
 
 @Article{DeNardiFrenchJones2009,
-  author={Mariacristina De Nardi and Eric French and John Bailey Jones},
+  author={Mariacristina DeNardi and Eric French and John Bailey Jones},
   title={{Life Expectancy and Old Age Savings}},
   journal={American Economic Review},
   year=2009,
@@ -1357,7 +1357,7 @@
 
 
 @TechReport{DeNardiYang2015,
-  author = {De Nardi, Mariacristina and Yang, Fang},
+  author = {DeNardi, Mariacristina and Yang, Fang},
   title = {Wealth Inequality, Family Background, and Estate Taxation},
   year = 2015,
   month = {March},
@@ -1503,7 +1503,7 @@ url  =  {http://EconPapers.repec.org/RePEc:bin:bpeajo:v:44:y:2012:i:2012-01:p:29
 
 
 @Article{FernandezVillaverdeKrueger2011,
-  author={Fernández-Villaverde, Jesús and Krueger, Dirk},
+  author={Fernandez-Villaverde, Jesus and Krueger, Dirk},
   title={{Consumption And Saving Over The Life Cycle: How Important Are Consumer Durables?}},
   journal={Macroeconomic Dynamics},
   year=2011,
@@ -2271,7 +2271,7 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
 @TechReport{KindermannKrueger2014,
   author={Fabian Kindermann and Dirk Krueger},
   title={{High Marginal Tax Rates on the Top 1\%? Lessons from a Life Cycle Model with Idiosyncratic Income Risk}},
-  year=2024,
+  year=2014,
   month=Oct,
   institution={Penn Institute for Economic Research, Department of Economics, University of Pennsylvania},
   type={PIER Working Paper Archive},
@@ -2533,6 +2533,21 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
   number = {1},
   pages = {83-114}
 }
+
+@Article{MankiwZeldes1991,
+  author={Mankiw, N. Gregory and Zeldes, Stephen P.},
+  title={{The consumption of stockholders and nonstockholders}},
+  journal={Journal of Financial Economics},
+  year=1991,
+  volume={29},
+  number={1},
+  pages={97-112},
+  month={March},
+  keywords={},
+  abstract={Only one-fourth of U.S. families own stock. This paper examines whether the consumption of stockholders differs from the consumption of non-stockholders and whether these differences help explain the empirical failures of the consumption-based CAPM. Household panel data are used to construct time series on the consumption of each group. The results indicate that the consumption of stockholders is more volatile than that of non-stockholders and is more highly correlated with the excess return on the stock market. These differences help explain the size of the equity premium, although they do not fully resolve the equity premium puzzle.<P>(This abstract was borrowed from another version of this item.)},
+  url={http://ideas.repec.org/a/eee/jfinec/v29y1991i1p97-112.html}
+}
+
 
 
 @Article{MeghirPistaferri2004,
