--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,5 +1,28 @@
 \thispagestyle{plain}
 
-The analysis of the effects of heterogeneity on aggregate economic outcomes has seen a resurgence in the recent macroeconomic literature. The exponential increase in computer power over the last decades has allowed researchers to solve ever more complex theoretical models with meaningful heterogeneity along various dimensions, while at the same time bringing ever more granular micro-level data to the table when testing the model predictions. \\
-This thesis explores two varieties of this recent vintage of models of heterogeneity. The first part of the thesis explores the implications of learning about idiosyncratic income risk on the wealth distribution and compares the model results to observed data, with a focus on the effects of changes in cross-sectional income inequality. To this end, income processes with profile heterogeneity are estimated from survey data and then used as inputs for a structural model of household saving, in which households are imperfectly informed about the stochastic process governing the evolution of their lifetime income, but can learn about the underlying parameters. Model results for a standard model are compared to those of a model with consumption habits, while a structural break in the cross-sectional variance of idiosyncratic income growth rates is employed in an attempt to capture the secular rise in income inequality observed since the late 1970s and explore its implications for the predicted wealth distribution. 
-The second part of the thesis looks at heterogeneity on the production side of the economy and its implications for international trade. Following an existing approach in the literature, we develop testable implications of the Melitz and Ottaviano (2008) model of trade, in which firms differ in their productivity and have to make production and exporting decisions in the face of costs to trade. Our approach allows us to test the effects of NAFTA on productivity in nine manufacturing sectors in North America and thereby complement and extend the existing literature on the effects of trade liberalisations.
+The analysis of the effects of heterogeneity on aggregate economic outcomes has 
+seen a resurgence in the recent macroeconomic literature. The exponential increase
+ in computer power over the last decades has allowed researchers to solve ever 
+more complex theoretical models with meaningful heterogeneity along various 
+dimensions, while at the same time bringing ever more granular micro-level data 
+to the table when testing the model predictions. \\
+This thesis explores two varieties of this recent vintage of models of heterogeneity.
+The first part of the thesis investigates the implications for wealth distributions
+of combining the standard life-cycle incomplete markets model of household 
+consumption with income processes featuring heterogeneity in individual-specific
+growth rates, which households can learn about over the course of their working life.
+To this extent, first the recent literature on partial insurance and models
+of wealth inequality is reviewed. Then, income processes with profile heterogeneity
+ are estimated from PSID and BHPS data. Finally, the estimated income processes
+are used in a quantitative model of household consumption and saving, which is 
+calibrated to empirical wealth distributions obtained from the SCF and the BHPS.
+Comparative statics exercises are performed to identify the drivers in the models
+success (or failure) to match the empirical profile of wealth holdings.
+The second part of the thesis looks at heterogeneity on the production side of 
+the economy and its implications for international trade. Following an existing 
+approach in the literature, we develop testable implications of the Melitz and 
+Ottaviano (2008) model of trade, in which firms differ in their 
+productivity and have to make production and exporting decisions in the face of 
+costs to trade. Our approach allows us to test the effects of NAFTA on productivity 
+in 64 manufacturing sectors in North America and thereby complement and extend
+ the existing literature on the effects of trade liberalisations.
