Forgot to commit?

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -13,16 +13,33 @@ consumption with income processes featuring heterogeneity in individual-specific
 growth rates, which households can learn about over the course of their working life.
 To this extent, first the recent literature on partial insurance and models
 of wealth inequality is reviewed. Then, income processes with profile heterogeneity
- are estimated from PSID and BHPS data. Finally, the estimated income processes
-are used in a quantitative model of household consumption and saving, which is 
-calibrated to empirical wealth distributions obtained from the SCF and the BHPS.
+ are estimated from PSID and BHPS data. The results confirm the findings of 
+previous studies that allowing for profile heterogeneity significantly lowers
+the estimated persistence and innovation variance of persistent shocks to household
+income, and documents substantial variation in the estimated parameters of the 
+income process across time periods and measures of household income.
+The estimated income processes obtained are then used in a quantitative model of 
+household consumption and saving in order to investigate the implications for the 
+model predictions on the wealth distribution. The model is calibrated to
+ empirical wealth distributions obtained from the SCF and the BHPS, and it is shown
+that the inclusion of individual-specific growth rate heterogeneity in income 
+severely deteriorates the models ability to fit the shape of the data. 
 Comparative statics exercises are performed to identify the drivers in the models
-success (or failure) to match the empirical profile of wealth holdings.
+failure to match the empirical profile of wealth holdings, which show that it 
+is precisely the two key parameters which differ between the standard AR(1) model
+and the heterogeneous profile model, the persistence and variance of the permanent
+shock to household income, which drive model fit. 
 The second part of the thesis looks at heterogeneity on the production side of 
 the economy and its implications for international trade. Following an existing 
 approach in the literature, we develop testable implications of the Melitz and 
 Ottaviano (2008) model of trade, in which firms differ in their 
 productivity and have to make production and exporting decisions in the face of 
-costs to trade. Our approach allows us to test the effects of NAFTA on productivity 
-in 64 manufacturing sectors in North America and thereby complement and extend
- the existing literature on the effects of trade liberalisations.
+costs to trade. Applying an estimation strategy previously used in the literature,
+we find weak support of the models predictions in data for 64 manufacturing industries
+in the NAFTA member countries Canada, Mexico and USA. We then test additional 
+model predictions by constructing a measure of entry conditions by industry based
+on firm turnover, which allows us to divide our sample into fixed and free entry
+industries. Furthermore, we include the effects of third country tariff barriers
+on the relative performance of two trading partners' industries. While the results
+are broadly in line with model predictions, we find some evidence of violations
+of the predictions in the data.
