--- a/gw_price_sr.tex
+++ b/gw_price_sr.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.1 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Sep 28, 2015 - 15:50:00
+% Date and time: Fri, Oct 02, 2015 - 13:14:16
 \begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
@@ -9,23 +9,23 @@
 \\[-1.8ex] & \multicolumn{6}{c}{$\Delta \log \left(\frac{p}{p^*} \right)$} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- $\Delta \log \tau_t$ & 0.0002 & 0.0003 & $-$0.003 & 0.002 & $-$0.003 & 0.002 \\ 
-  & (0.001) & (0.002) & (0.003) & (0.003) & (0.003) & (0.003) \\ 
+ $\Delta \log \tau_t$ & 0.002 & 0.002 & 0.0002 & 0.004$^{*}$ & 0.0001 & 0.004$^{**}$ \\ 
+  & (0.001) & (0.001) & (0.002) & (0.002) & (0.002) & (0.002) \\ 
   & & & & & & \\ 
- $\Delta \log \tau_t^*$ & $-$0.003$^{**}$ & $-$0.004$^{**}$ & $-$0.002 & $-$0.004 & $-$0.002 & $-$0.004 \\ 
-  & (0.002) & (0.002) & (0.003) & (0.003) & (0.003) & (0.003) \\ 
+ $\Delta \log \tau_t^*$ & $-$0.001 & $-$0.001 & $-$0.001 & 0.0005 & $-$0.001 & 0.0004 \\ 
+  & (0.001) & (0.001) & (0.002) & (0.003) & (0.002) & (0.002) \\ 
   & & & & & & \\ 
- $\Delta \log D_t$ & 0.011 & 0.013$^{*}$ & 0.010 & 0.018 & 0.010 & 0.018 \\ 
-  & (0.007) & (0.008) & (0.009) & (0.020) & (0.009) & (0.020) \\ 
+ $\Delta \log D_t$ & $-$0.029 & $-$0.027 & $-$0.070$^{**}$ & 0.032 & $-$0.067$^{**}$ & 0.033 \\ 
+  & (0.024) & (0.023) & (0.033) & (0.045) & (0.032) & (0.044) \\ 
   & & & & & & \\ 
- $\Delta \log D_t^*$ & $-$0.019 & $-$0.014 & $-$0.017 & $-$0.186 & $-$0.017 & $-$0.186 \\ 
-  & (0.023) & (0.023) & (0.019) & (0.266) & (0.019) & (0.266) \\ 
+ $\Delta \log D_t^*$ & 0.104$^{***}$ & 0.088$^{**}$ & 0.082$^{*}$ & 0.347$^{*}$ & 0.078$^{*}$ & 0.212 \\ 
+  & (0.039) & (0.036) & (0.042) & (0.185) & (0.041) & (0.153) \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 984 & 984 & 354 & 318 & 354 & 318 \\ 
-R$^{2}$ & 0.011 & 0.009 & 0.033 & 0.010 & 0.033 & 0.010 \\ 
+Observations & 2,769 & 2,769 & 1,021 & 881 & 1,021 & 881 \\ 
+R$^{2}$ & 0.004 & 0.003 & 0.009 & 0.010 & 0.008 & 0.008 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
- & \multicolumn{6}{r}{(1),(3): Fixed effects country-industry (2),(4): Fixed effects country pair} \\ 
+ & \multicolumn{6}{r}{(1),(3): Fixed effects country-industry; (2),(4): Fixed effects country pair} \\ 
 \end{tabular} 
