--- a/gw_price_sr_third.tex
+++ b/gw_price_sr_third.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.1 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Fri, Oct 02, 2015 - 00:31:10
+% Date and time: Fri, Oct 02, 2015 - 13:14:57
 \begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
@@ -9,33 +9,33 @@
 \\[-1.8ex] & \multicolumn{6}{c}{$\Delta \log \left(\frac{p}{p^*} \right)$} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- $\Delta \log \tau^{hf}$ & $-$0.003 & 0.003 &  & $-$0.004 &  &  \\ 
-  & (0.009) & (0.008) &  & (0.013) &  &  \\ 
+ $\Delta \log \tau^{hf}$ & $-$0.001 & $-$0.001 & $-$0.003 & 0.002 & $-$0.003 & 0.002 \\ 
+  & (0.001) & (0.001) & (0.003) & (0.002) & (0.003) & (0.002) \\ 
   & & & & & & \\ 
- $\Delta \log \tau^{fh}$ & 0.003 & 0.003 & 0.161 & 0.004 & $-$0.061 & $-$0.061 \\ 
-  & (0.004) & (0.005) & (0.182) & (0.007) & (0.084) & (0.084) \\ 
+ $\Delta \log \tau^{fh}$ & 0.0002 & 0.0002 & $-$0.0005 & 0.002 & $-$0.001 & 0.002 \\ 
+  & (0.002) & (0.002) & (0.003) & (0.003) & (0.003) & (0.003) \\ 
   & & & & & & \\ 
- $\Delta \log \tau^{ht}$ & 0.030 & 0.002 &  & 0.036 &  &  \\ 
-  & (0.023) & (0.019) &  & (0.034) &  &  \\ 
+ $\Delta \log \tau^{ht}$ & 0.005$^{***}$ & 0.005$^{***}$ & 0.005 & 0.007$^{**}$ & 0.005$^{*}$ & 0.007$^{***}$ \\ 
+  & (0.002) & (0.001) & (0.003) & (0.003) & (0.003) & (0.003) \\ 
   & & & & & & \\ 
- $\Delta \log \tau^{th}$ & 0.010$^{**}$ & 0.007 &  & 0.013$^{*}$ &  &  \\ 
-  & (0.004) & (0.005) &  & (0.007) &  &  \\ 
+ $\Delta \log \tau^{th}$ & 0.002 & 0.002 & 0.004 & $-$0.002 & 0.004 & $-$0.002 \\ 
+  & (0.002) & (0.002) & (0.003) & (0.003) & (0.003) & (0.003) \\ 
   & & & & & & \\ 
- $\Delta \log \tau^{ft}$ & $-$0.002 & $-$0.001 & 0.055 & $-$0.002 & $-$0.045 & $-$0.045 \\ 
-  & (0.004) & (0.005) & (0.182) & (0.007) & (0.084) & (0.084) \\ 
+ $\Delta \log \tau^{ft}$ & $-$0.001 & $-$0.001 & 0.00002 & $-$0.002 & 0.00005 & $-$0.002 \\ 
+  & (0.002) & (0.002) & (0.003) & (0.003) & (0.003) & (0.003) \\ 
   & & & & & & \\ 
- $\Delta \log \tau^{tf}$ & 0.006 & 0.007 & $-$0.106 & 0.008 & 0.015 & 0.015 \\ 
-  & (0.006) & (0.007) & (0.182) & (0.009) & (0.084) & (0.084) \\ 
+ $\Delta \log \tau^{tf}$ & $-$0.007$^{***}$ & $-$0.007$^{***}$ & $-$0.008$^{***}$ & $-$0.008$^{***}$ & $-$0.008$^{***}$ & $-$0.008$^{***}$ \\ 
+  & (0.002) & (0.002) & (0.003) & (0.003) & (0.003) & (0.002) \\ 
   & & & & & & \\ 
- $\Delta \log D_t$ & 0.015 & 0.022 & 0.017 & $-$0.034 & 0.013 & 0.013 \\ 
-  & (0.019) & (0.024) & (0.015) & (0.112) & (0.022) & (0.022) \\ 
+ $\Delta \log D_t$ & $-$0.013 & $-$0.013 & $-$0.067$^{*}$ & 0.074 & $-$0.062$^{*}$ & 0.072 \\ 
+  & (0.026) & (0.025) & (0.035) & (0.048) & (0.034) & (0.046) \\ 
   & & & & & & \\ 
- $\Delta \log D_t^*$ & $-$0.018 & $-$0.010 & $-$0.018 & 0.950 & $-$0.016 & $-$0.016 \\ 
-  & (0.020) & (0.026) & (0.016) & (0.645) & (0.022) & (0.022) \\ 
+ $\Delta \log D_t^*$ & 0.093$^{**}$ & 0.083$^{**}$ & 0.071$^{*}$ & 0.404$^{**}$ & 0.069$^{*}$ & 0.295$^{*}$ \\ 
+  & (0.039) & (0.037) & (0.043) & (0.205) & (0.041) & (0.167) \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 364 & 364 & 134 & 118 & 134 & 134 \\ 
-R$^{2}$ & 0.062 & 0.012 & 0.056 & 0.127 & 0.013 & 0.013 \\ 
+Observations & 2,522 & 2,522 & 965 & 743 & 965 & 743 \\ 
+R$^{2}$ & 0.023 & 0.022 & 0.028 & 0.044 & 0.027 & 0.040 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
