--- a/gw_price_lr.tex
+++ b/gw_price_lr.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.1 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Sep 28, 2015 - 15:50:56
+% Date and time: Fri, Oct 02, 2015 - 13:14:33
 \begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
@@ -9,36 +9,36 @@
 \\[-1.8ex] & \multicolumn{6}{c}{$\Delta \log \left(\frac{p_t}{p_t^*} \right)$} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- $\Delta \log \tau_t$ & $-$0.002 & 0.0001 & $-$0.009 & 0.004 & $-$0.008 & 0.005 \\ 
-  & (0.002) & (0.002) & (0.011) & (0.004) & (0.006) & (0.003) \\ 
+ $\Delta \log \tau_t$ & 0.001 & 0.001 & $-$0.001 & 0.005$^{**}$ & $-$0.001 & 0.004$^{**}$ \\ 
+  & (0.001) & (0.001) & (0.002) & (0.002) & (0.002) & (0.002) \\ 
   & & & & & & \\ 
- $\Delta \log \tau_t^*$ & 0.0004 & 0.0003 & 0.004 & 0.001 & 0.003 & 0.001 \\ 
-  & (0.003) & (0.002) & (0.012) & (0.005) & (0.008) & (0.004) \\ 
+ $\Delta \log \tau_t^*$ & $-$0.001 & 0.00004 & $-$0.00004 & $-$0.002 & 0.0002 & 0.0004 \\ 
+  & (0.001) & (0.001) & (0.002) & (0.002) & (0.002) & (0.002) \\ 
   & & & & & & \\ 
- $\Delta \log D_t$ & 0.003 & 0.005 & 0.006 & 0.014 & 0.004 & 0.013 \\ 
-  & (0.007) & (0.008) & (0.009) & (0.019) & (0.010) & (0.020) \\ 
+ $\Delta \log D_t$ & $-$0.031 & $-$0.025 & $-$0.063$^{**}$ & 0.008 & $-$0.061$^{**}$ & 0.023 \\ 
+  & (0.023) & (0.021) & (0.031) & (0.041) & (0.030) & (0.040) \\ 
   & & & & & & \\ 
- $\Delta \log D_t^*$ & $-$0.011 & $-$0.007 & $-$0.014 & 0.241 & $-$0.010 & 0.094 \\ 
-  & (0.022) & (0.023) & (0.018) & (0.284) & (0.019) & (0.210) \\ 
+ $\Delta \log D_t^*$ & 0.038 & 0.028 & 0.038 & 0.366$^{**}$ & 0.036 & 0.132 \\ 
+  & (0.036) & (0.033) & (0.039) & (0.174) & (0.037) & (0.141) \\ 
   & & & & & & \\ 
- $\log \left(\frac{p_{t-1}}{p_{t-1}^*} \right)$ & $-$0.123$^{***}$ & $-$0.009 & $-$0.141$^{***}$ & $-$0.216$^{***}$ & $-$0.031 & $-$0.035 \\ 
-  & (0.024) & (0.021) & (0.041) & (0.052) & (0.031) & (0.046) \\ 
+ $\log \left(\frac{p_{t-1}}{p_{t-1}^*} \right)$ & $-$0.123$^{***}$ & $-$0.118$^{***}$ & $-$0.121$^{***}$ & $-$0.149$^{***}$ & $-$0.118$^{***}$ & $-$0.137$^{***}$ \\ 
+  & (0.006) & (0.005) & (0.010) & (0.010) & (0.009) & (0.009) \\ 
   & & & & & & \\ 
- $\log \tau_{t-1}$ & $-$0.006$^{**}$ & $-$0.003$^{**}$ & $-$0.014 & $-$0.005 & $-$0.012 & $-$0.003 \\ 
-  & (0.002) & (0.001) & (0.016) & (0.004) & (0.007) & (0.002) \\ 
+ $\log \tau_{t-1}$ & $-$0.001 & $-$0.001 & $-$0.001 & $-$0.0003 & $-$0.001 & $-$0.001 \\ 
+  & (0.001) & (0.001) & (0.002) & (0.002) & (0.002) & (0.002) \\ 
   & & & & & & \\ 
- $\log \tau_{t-1}^*$ & 0.001 & 0.0003 & 0.008 & $-$0.001 & 0.007 & $-$0.00001 \\ 
-  & (0.003) & (0.001) & (0.016) & (0.005) & (0.007) & (0.001) \\ 
+ $\log \tau_{t-1}^*$ & $-$0.002 & $-$0.00002 & $-$0.0003 & $-$0.006$^{***}$ & 0.0004 & $-$0.002 \\ 
+  & (0.001) & (0.001) & (0.002) & (0.002) & (0.002) & (0.001) \\ 
   & & & & & & \\ 
- $\log L_{t-1}$ & 0.237 & 0.068 & 0.383 & 0.638 & 0.210 & 0.323 \\ 
-  & (0.242) & (0.264) & (0.333) & (0.650) & (0.360) & (0.665) \\ 
+ $\log L_{t-1}$ & $-$0.570$^{***}$ & $-$0.541$^{***}$ & $-$0.497$^{***}$ & $-$0.775$^{***}$ & $-$0.480$^{***}$ & $-$0.734$^{***}$ \\ 
+  & (0.082) & (0.077) & (0.136) & (0.139) & (0.131) & (0.135) \\ 
   & & & & & & \\ 
- $\log L_{t-1}^*$ & $-$0.463$^{*}$ & $-$0.243 & $-$0.584$^{*}$ & $-$0.941 & $-$0.359 & $-$0.580 \\ 
-  & (0.253) & (0.276) & (0.350) & (0.680) & (0.377) & (0.694) \\ 
+ $\log L_{t-1}^*$ & 0.466$^{***}$ & 0.458$^{***}$ & 0.400$^{***}$ & 0.611$^{***}$ & 0.396$^{***}$ & 0.616$^{***}$ \\ 
+  & (0.080) & (0.076) & (0.132) & (0.138) & (0.126) & (0.133) \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 984 & 984 & 354 & 318 & 354 & 318 \\ 
-R$^{2}$ & 0.120 & 0.063 & 0.125 & 0.150 & 0.068 & 0.073 \\ 
+Observations & 2,769 & 2,769 & 1,021 & 881 & 1,021 & 881 \\ 
+R$^{2}$ & 0.184 & 0.181 & 0.192 & 0.246 & 0.187 & 0.224 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
