--- a/gw_prod_sr.tex
+++ b/gw_prod_sr.tex
@@ -1,43 +1,31 @@
 
-% Table created by stargazer v.5.0 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Apr 28, 2014 - 17:33:44
-\begin{tabular}{@{\extracolsep{5pt}}lcccc} 
+% Table created by stargazer v.5.1 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
+% Date and time: Fri, Oct 02, 2015 - 13:51:58
+\begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
- & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
-\cline{2-5} 
-\\[-1.8ex] & \multicolumn{4}{c}{$\Delta \log \left(\frac{z}{z^*} \right)$} \\ 
-\\[-1.8ex] & (1) & (2) & (3) & (4)\\ 
+ & \multicolumn{6}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-7} 
+\\[-1.8ex] & \multicolumn{6}{c}{$\Delta \log \left(\frac{z}{z^*} \right)$} \\ 
+\\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- $\Delta \log \tau_t$ & 0.007 & 0.007 & 0.009$^{**}$ & 0.009$^{**}$ \\ 
-  & (0.005) & (0.006) & (0.004) & (0.004) \\ 
-  & & & & \\ 
- $\Delta \log \tau_t^*$ & $-$0.006 & $-$0.006 & $-$0.003 & $-$0.003 \\ 
-  & (0.005) & (0.005) & (0.004) & (0.004) \\ 
-  & & & & \\ 
- $\Delta \log \theta_t$ & $-$0.415 & $-$0.389 &  &  \\ 
-  & (0.264) & (0.283) &  &  \\ 
-  & & & & \\ 
- $\Delta \log \theta_t^*$ & 0.767$^{*}$ & 0.681 &  &  \\ 
-  & (0.425) & (0.482) &  &  \\ 
-  & & & & \\ 
- $\Delta \log D_t$ &  &  & $-$0.329$^{***}$ & $-$0.322$^{***}$ \\ 
-  &  &  & (0.035) & (0.036) \\ 
-  & & & & \\ 
- $\Delta \log D_t^*$ &  &  & 0.656$^{***}$ & 0.660$^{***}$ \\ 
-  &  &  & (0.057) & (0.059) \\ 
-  & & & & \\ 
- diff(log(firms\_h)) &  &  & $-$0.012 & $-$0.012 \\ 
-  &  &  & (0.061) & (0.062) \\ 
-  & & & & \\ 
- diff(log(firms\_f)) &  &  & 0.428 & 0.359 \\ 
-  &  &  & (0.333) & (0.380) \\ 
-  & & & & \\ 
+ $\Delta \log \tau_t$ & $-$0.009$^{***}$ & $-$0.009$^{***}$ & $-$0.018$^{***}$ & $-$0.002 & $-$0.018$^{***}$ & $-$0.002 \\ 
+  & (0.003) & (0.003) & (0.005) & (0.006) & (0.005) & (0.006) \\ 
+  & & & & & & \\ 
+ $\Delta \log \tau_t^*$ & 0.006$^{*}$ & 0.006$^{*}$ & 0.010$^{**}$ & 0.011$^{*}$ & 0.010$^{**}$ & 0.011$^{*}$ \\ 
+  & (0.003) & (0.003) & (0.004) & (0.006) & (0.004) & (0.006) \\ 
+  & & & & & & \\ 
+ $\Delta \log D_t$ & 0.146$^{***}$ & 0.145$^{***}$ & 0.200$^{***}$ & 0.056 & 0.201$^{***}$ & 0.051 \\ 
+  & (0.056) & (0.054) & (0.072) & (0.118) & (0.070) & (0.114) \\ 
+  & & & & & & \\ 
+ $\Delta \log D_t^*$ & 0.015 & 0.035 & $-$0.097 & 0.541 & $-$0.095 & 0.716$^{*}$ \\ 
+  & (0.089) & (0.083) & (0.091) & (0.484) & (0.088) & (0.399) \\ 
+  & & & & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 324 & 324 & 320 & 320 \\ 
-R$^{2}$ & 0.027 & 0.023 & 0.428 & 0.432 \\ 
+Observations & 2,695 & 2,695 & 990 & 860 & 990 & 860 \\ 
+R$^{2}$ & 0.007 & 0.006 & 0.022 & 0.006 & 0.021 & 0.008 \\ 
 \hline 
 \hline \\[-1.8ex] 
-\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
- & \multicolumn{4}{r}{Fixed effects for country pair} \\ 
+\textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+ & \multicolumn{6}{r}{(1),(3),(4): Fixed effects country-industry; (2),(5),(6): Fixed effect country pair} \\ 
 \end{tabular} 
