--- a/Data_Appendix.tex
+++ b/Data_Appendix.tex
@@ -1,3 +1,4 @@
+
 \begin{spacing}{1}
 
 \noindent \textbf{Tariffs ($\tau$)}
@@ -76,3 +77,5 @@
 	\item \textbf{Total Wages}: Available for Canada (1990-2008, ISIC Rev. 3.1, million current CAD) from the \href{http://stats.oecd.org/index.aspx?queryid=224}{OECD SDBS database}, for Mexico (1988-1990, 1993, CMAP; 1994-1998, 2000-2007, annual, ISIC Rev. 3.1, million current MXN) from the Annual Industrial Survey (\emph{Encuesta Industrial Anual}), which is published annually by   the \href{http://buscador.inegi.org.mx/search?q=encuesta+industrial+anual&client=ProductosR&proxystylesheet=ProductosR&num=10&getfields=*&sort=meta:edicion:D:E:::D&entsp=a__inegi_politica_p72&lr=lang_es\%7Clang_en&oe=UTF-8&ie=UTF-8&ip=10.210.100.253&entqr=3&filter=0&site=ProductosBuscador&tlen=260&ulang=en&start=0}{\emph{Instituto Nacional de Estadistica y Geografia}}, and and the U.S. (1988-2010, NAICS, million current USD) from the \href{http://www.nber.org/nberces/}{NBER-CES Manufacturing Industry Database} (Becker, Gray, and Marvakov, 2013). The Canadian and Mexican data are converted to NAICS using appropriate correspondence tables, and all values are converted to constant 2005 USD. 
 		
 	\end{itemize}	
+
+\end{spacing}
