Include disasters/bequests

--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -2291,6 +2291,21 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
   url={http://ideas.repec.org/c/boc/bocode/s457951.html},
 }
 
+@Article{KopczukLupton2007,
+  author={Wojciech Kopczuk and Joseph P. Lupton},
+  title={{To Leave or Not to Leave: The Distribution of Bequest Motives}},
+  journal={Review of Economic Studies},
+  year=2007,
+  volume={74},
+  number={1},
+  pages={207-235},
+  month={},
+  keywords={},
+  doi={},
+  abstract={ We examine the effect of observed and unobserved heterogeneity in the desire to die with positive net worth. Using a structural life-cycle model nested in a switching regression with unknown sample separation, we find that roughly three-fourths of the elderly single population has abequest motive. Both the presence and the magnitude of the bequest motive are statistically and economically significant. On average, households with a bequest motive spend about 25\% less on consumption expenditures. We conclude that, among the elderly single households in our sample, about four-fifths of their net wealth will be bequeathed and approximately half of this is due to a bequest motive. Copyright 2007, Wiley-Blackwell.},
+  url={https://ideas.repec.org/a/oup/restud/v74y2007i1p207-235.html}
+}
+
 
 @Article{KopczukSaezSong2010,
   author = {Wojciech Kopczuk and Emmanuel Saez and Jae Song},
