Abstract + Intro typo correction

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -23,8 +23,8 @@ household consumption and saving in order to investigate the implications for th
 model predictions on the wealth distribution. The model is calibrated to
  empirical wealth distributions obtained from the SCF and the BHPS, and it is shown
 that the inclusion of individual-specific growth rate heterogeneity in income 
-severely deteriorates the models ability to fit the shape of the data. 
-Comparative statics exercises are performed to identify the drivers in the models
+severely deteriorates the model's ability to fit the shape of the data. 
+Comparative statics exercises are performed to identify the drivers in the model's
 failure to match the empirical profile of wealth holdings, which show that it 
 is precisely the two key parameters which differ between the standard AR(1) model
 and the heterogeneous profile model, the persistence and variance of the permanent
@@ -35,7 +35,7 @@ approach in the literature, we develop testable implications of the Melitz and
 Ottaviano (2008) model of trade, in which firms differ in their 
 productivity and have to make production and exporting decisions in the face of 
 costs to trade. Applying an estimation strategy previously used in the literature,
-we find weak support of the models predictions in data for 64 manufacturing industries
+we find weak support of the model's predictions in data for 64 manufacturing industries
 in the NAFTA member countries Canada, Mexico and USA. We then test additional 
 model predictions by constructing a measure of entry conditions by industry based
 on firm turnover, which allows us to divide our sample into fixed and free entry
