--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -21,10 +21,10 @@ a mainstream audience. However, while the public has only recently started to
 take an interest in issues of inequality and distribution, the economic literature
 has been developing quantitative models of heterogeneity for almost three decades.
 Seminal papers such as \citet{Imrohoroglu1989}, \citet{Huggett1993}, and
-\citet{Aiyagari1994} have laid the groundwork for a vast literature explicitly 
+\citet{Aiyagari1994} laid the groundwork for a vast literature explicitly 
 modelling the choices of heterogeneous agents based on microeconomic evidence.
-A major factor in the move towards models of explicit heterogeneity have been 
-the huge advancements in computer power in recent decades. With Moore's law
+A major factor in the move towards models of explicit heterogeneity has been 
+the huge advancement in computer power in recent decades. With Moore's law
 still holding to this day, the transistor count of the fastest microprocessor
 today is about two-thousand times as high as that of the fastest microprocessor
 twenty-five years ago, when \citet{Zeldes1989} published one of the first works
@@ -33,7 +33,7 @@ Besides enabling researchers to numerically solve ever more complex optimisation
 problems with state spaces of ever more dimensions, the advancements in computer
 power have also vastly improved data processing capabilities, a development that
 in turn has led to a surge in empirical work exploiting large microeconomic data
-sets, the results of which can then be used to validate models of household
+sets, the results of which can then be used to evaluate models of household
 and firm behaviour. \\
 The present work explores heterogeneity in two different classes of economic models,
 using both approaches outlined above. While the first part will build up towards
@@ -49,7 +49,7 @@ It will highlight the key empirical challenges by presenting stylised facts on
 the cross sectional wealth distribution using the most recent wave of the UK
 Wealth and Asset Survey as an example. Then, the workhorse model of the literature
 on household savings decision, the incomplete markets life-cycle model of consumption,
-is briefly reviewed along with recent work partial insurance in this model. 
+is briefly reviewed along with recent work on partial insurance in this model. 
 Then, extensions of the model which help it match the stylised facts of empirical
 wealth distributions are reviewed.
 
