Add discussion of unit root

--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -3784,3 +3784,18 @@ year = {2004}
   howpublished = {\url{http://www.parisschoolofeconomics.eu/docs/vandendriessche-damien/bhps_ukhls.zip}},
   year = {2015}
 }
+
+@TechReport{RePEc:hhs:uulswp:2010_019,
+  author={Gustavsson, Magnus and Österholm, Pär},
+  title={{Does the Labor-Income Process Contain a Unit Root? Evidence from Individual-Specific Time Series}},
+  year=2010,
+  month=Dec,
+  institution={Uppsala University, Department of Economics},
+  type={Working Paper Series, Center for Labor Studies},
+  url={https://ideas.repec.org/p/hhs/uulswp/2010_019.html},
+  number={2010:19},
+  abstract={Employing econometric methods for univariate time series, this paper investigates the empirical validity of assuming a unit root in individuals’ labor-income processes. Using a Swedish register-based longitudinal dataset which allows us to follow a cohort of workers from 1968 to 2005, we are able to obtain distributions of median unbiased estimates of localto- unity parameters. The results indicate that earnings for the representative worker are governed by a process where shocks to earnings have fairly high persistence but are both economically and statistically significantly different from having permanent effects; that is, the largest autoregressive root is less than unity. These results add to the studies that question the heavy use of unit-root processes for earnings in calibrations of life-cycle models.},
+  keywords={Idiosyncratic income risk; Unit-root model; Earnings dynamics; Local-to-unity parameter},
+  doi={},
+}
+
