Fix Gustavsson/Oesterholm citation
Replace umlauts with vowels...

--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -3785,8 +3785,8 @@ year = {2004}
   year = {2015}
 }
 
-@TechReport{RePEc:hhs:uulswp:2010_019,
-  author={Gustavsson, Magnus and Österholm, Pär},
+@TechReport{GustavssonOsterholm2010,
+  author={Gustavsson, Magnus and Oesterholm, Paer},
   title={{Does the Labor-Income Process Contain a Unit Root? Evidence from Individual-Specific Time Series}},
   year=2010,
   month=Dec,
